--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "framer-motion": "^11.15.0",
     "json-server": "^1.0.0-beta.3",
     "react": "^19.0.0",
+    "react-countdown": "^2.3.6",
     "react-dom": "^19.0.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.1",
